--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name" translatable="false">Miketoide</string>
+
+    <!-- labels -->
+    <string name="label_not_found">No apps found</string>
+
+    <!-- alert -->
+    <string name="alert_generic_error">Something went wrong. Please, try again</string>
 </resources>
