--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -2,6 +2,9 @@
 <resources>
     <!-- labels -->
     <string name="label_not_found">Nenhuma app encontrada</string>
+    <string name="label_network_error">Sem conexão à internet</string>
+    <string name="label_top_apps">Apps em destaque</string>
+    <string name="label_all_apps">Todas as nossas apps</string>
 
     <!-- alerts -->
     <string name="alert_generic_error">Desculpe, algo de errado aconteceu. Por favor, tente novamente</string>
