--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,14 @@
     <string name="app_name" translatable="false">Miketoide</string>
 
     <!-- labels -->
-    <string name="label_not_found">No apps found</string>
+    <string name="label_generic_error">Sorry, something went wrong…</string>
     <string name="label_network_error">No internet connection</string>
     <string name="label_top_apps">Hottest apps</string>
     <string name="label_all_apps">All our apps</string>
 
+    <!-- tooltips -->
+    <string name="tooltip_try_again">Try again</string>
+
     <!-- alert -->
-    <string name="alert_generic_error">Something went wrong. Please, try again</string>
+    <string name="alert_generic_error">Sorry, something went wrong. Please, try again</string>
 </resources>
